Refactored the packaging of the stream and collection methods, and added the refined pattern (which is the reified version of the record pattern ensuring the bias of making illegal states unrepresentable